<resources>
    <string name="app_name">K-kcal</string>
    <string name="app">K-KCAL APP</string>

    <string name="facebook_app_id">2683887558320566</string>
    <string name="fb_login_protocol_scheme">fb2683887558320566</string>
    <string name="client_id">253309644138-jc9ufvvth05ams2ktfgupu1om5av3m78.apps.googleusercontent.com</string>



    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forget_password"><u>Forgot password ?</u></string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account ? <font color="red"><u><b>SIGN UP</b></u></font></string>
    <string name="already_onboar_login">Already onboard? <font color="red"><u><b>Login</b></u></font></string>
    <string name="upload_profile_picture">Upload \nprofile picture</string>
    <string name="by_click_signup_you_ll_agree_with_our_terms_amp_condition_and_pricay_poilcy">By click signup you\'ll agree with our\nTerms &amp; Condition and Pricay Poilcy</string>
    <string name="resend_code_text">Resend Confirmation Code</string>
    <string name="expire">Code will be Expire in 1 minutes</string>
    <string name="verify">Verify</string>
    <string name="verify_text">We have sent you the code on the email you provided, please verify yourself.</string>
    <string name="_1_of_4">1 of 4</string>


    <string name="awesome">You are awesome, your account is created, let\'s give access to location to continue</string>
    <string name="_4_of_4"> 4 of 4</string>
    <string name="allow_to_access">Allow Access</string>
    <string name="_2_of_4">2 of 4</string>
    <string name="about_you">About You !</string>
    <string name="_3_of_4">3 of 4</string>
    <string name="this_is_used_to_make_better_reccommendation_n_just_for_you">This is used to make better reccommendation\njust for you.</string>
    <string name="bread_amp_egg"><![CDATA[Bread & Egg]]></string>
    <string name="_4_mins">4-mins</string>
    <string name="m_amp_s"><![CDATA[M & S]]></string>


    <string name="welcome_text">Totally control, total flexibility and total choice is totally yours!
        Find options and variety all within your specifications and burn a few extra calories getting there ;-D</string>

    <string-array name="lifestyle_array">
        <item>Sedate</item>
        <item>Sporty</item>
        <item>Domestic</item>
        <item>Deskjob</item>
        <item>Manual job</item>
        <item>Outdoor </item>
        <item>Gym</item>
        <item>Outdoor activities</item>
        <item>Extreme Sports</item>
        <item>Winter Sports</item>
        <item>Healthy</item>
        <item>Calorie Conscious</item>
        <item>Clean Eater</item>
    </string-array>
</resources>
