<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.VerifyCodeFragment">

    <RelativeLayout
        android:id="@+id/rl_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/one_of_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/text_size"
            android:text="@string/_1_of_4"
            android:textAllCaps="false"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/logo_margin_top"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lorem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/verify"
            android:layout_marginStart="@dimen/text_size"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/text_size"
            android:gravity="center_horizontal"
            android:text="@string/verify_text"
            android:textSize="16sp" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_code_blocks"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/rl_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_code_num1"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@mipmap/rectangle_copy"
            android:ems="10"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColor="#b4bfbf" />

        <EditText
            android:id="@+id/et_code_num2"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@mipmap/rectangle_copy"
            android:ems="10"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColor="#b4bfbf" />

        <EditText
            android:id="@+id/et_code_num3"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@mipmap/rectangle_copy"
            android:ems="10"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColor="#b4bfbf" />

        <EditText
            android:id="@+id/et_code_num4"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@mipmap/rectangle_copy"
            android:ems="10"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColor="#b4bfbf" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_code_blocks"
        android:layout_marginTop="99dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_code_text"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/_1_08"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_parent_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:id="@+id/view_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="bottom">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20sp"
                android:alpha="0.5"
                android:src="@drawable/back" />


            <View
                android:layout_width="1dp"
                android:layout_height="50sp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:gravity="center_horizontal"
                android:text="@string/verify"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_red_light"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>