<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130sp"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp">



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/rl_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@drawable/white_back"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/ll_profille_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:paddingLeft="100sp"
                android:layout_marginTop="10sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_profille_tv"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:layout_marginTop="10sp"
                    android:maxLines="1"
                    android:paddingLeft="20sp"
                    android:text="@string/bread_amp_egg"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/heading_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:paddingLeft="20sp"
                    android:text="@string/_4_mins"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/heading_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:paddingLeft="20sp"
                    android:text="@string/m_amp_s"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/heading_text_size" />

            </LinearLayout>

            <View
                android:layout_width="0.5sp"
                android:layout_height="60sp"
                android:layout_toLeftOf="@+id/ll_k_call"
                android:layout_marginRight="10sp"
                android:background="@android:color/darker_gray"
                android:layout_centerVertical="true"/>

            <LinearLayout
                android:id="@+id/ll_k_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="20sp"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="k_cal"
                    android:layout_marginTop="10sp"
                    android:textColor="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="194"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:layout_marginTop="8sp"
                    android:textColor="@android:color/black"/>


                <ImageView
                    android:id="@+id/iv_profile_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:layout_marginTop="8sp"
                    android:layout_alignParentBottom="true"
                    android:src="@mipmap/details" />
            </LinearLayout>

        </RelativeLayout>



        <ImageView
            android:id="@+id/iv_lock_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:background="@drawable/round_corner"
            android:scaleType="centerCrop"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="10sp"
            android:src="@drawable/ic_launcher_background" />

    </FrameLayout>

</LinearLayout>
