<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_back"
    tools:context=".ui.fragment.DetailFragment">


   <FrameLayout
       android:id="@+id/map_layout"
       android:layout_width="match_parent"
       android:layout_height="350sp">

       <com.google.android.gms.maps.MapView
           android:id="@+id/mapView"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:apiKey="AIzaSyD0u3ThIGMVgW0KS0t8shkm9Qr_OVwrRiw">
       </com.google.android.gms.maps.MapView>

   </FrameLayout>



    <FrameLayout
        android:id="@+id/detail_layout"
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:layout_below="@id/map_layout">


        <RelativeLayout
            android:id="@+id/map_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="@drawable/white_back"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/map_item_name"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:maxLines="1"
                android:layout_marginLeft="100sp"
                android:paddingLeft="20sp"
                android:text="@string/bread_amp_egg"
                android:textColor="@android:color/black"
                android:textSize="@dimen/heading_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_map_published"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:layout_marginLeft="100sp"
                android:layout_below="@id/map_item_name"
                android:layout_marginTop="5sp"
                android:text="@string/_4_mins"
                android:maxLines="1"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/small_text_size" />

            <TextView
                android:id="@+id/tv_map_location"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:layout_marginLeft="100sp"
                android:layout_below="@id/tv_map_published"
                android:layout_marginTop="5sp"
                android:text="@string/m_amp_s"
                android:maxLines="1"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/small_text_size" />

            <ImageView
                android:id="@+id/map_icon"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_marginLeft="80sp"
                android:layout_below="@id/tv_map_location"
                android:layout_marginTop="5sp"
                android:src="@drawable/map"
                android:layout_marginBottom="5sp" />

            <TextView
                android:id="@+id/tv_map_address"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:layout_toRightOf="@id/map_icon"
                android:layout_below="@id/tv_map_location"
                android:layout_marginTop="5sp"
                android:text="Address"
                android:maxLines="1"
                android:layout_marginBottom="5sp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text_size" />

            <View
                android:id="@+id/view"
                android:layout_width="0.5sp"
                android:layout_height="60sp"
                android:layout_toLeftOf="@+id/tv_k_cal"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="3sp"
                android:background="@android:color/darker_gray"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/tv_k_cal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="k_cal"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5sp"
                android:layout_marginTop="10sp"
                android:textColor="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tv_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="194"
                android:textSize="@dimen/text_size"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5sp"
                android:layout_below="@id/tv_k_cal"
                android:textStyle="bold"
                android:layout_marginTop="8sp"
                android:textColor="@android:color/black"/>



        </RelativeLayout>



        <ImageView
            android:id="@+id/iv_map_item"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:adjustViewBounds="true"
            android:background="@drawable/round_corner"
            android:scaleType="centerCrop"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="10sp"
            android:src="@drawable/ic_launcher_background" />

    </FrameLayout>


    <LinearLayout
        android:id="@+id/botoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_layout"
        android:layout_marginTop="10sp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="+51 kcal"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/heading_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="38 more items" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="+3 min"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/heading_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="49 more items" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_navigate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@mipmap/btn2"
            android:gravity="center"
            android:paddingBottom="15sp"
            android:text="Navigate"
            android:textColor="@android:color/white"
            android:layout_marginTop="20sp"
            android:textStyle="bold"
            android:textSize="@dimen/text_size" />
    </LinearLayout>


</RelativeLayout>